--- a/Talabat.APIs/Talabat.APIs.csproj
+++ b/Talabat.APIs/Talabat.APIs.csproj
@@ -19,10 +19,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Stripe.net" Version="46.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Talabat.Core\Talabat.Core.csproj" />
     <ProjectReference Include="..\Talabat.Repository\Talabat.Repository.csproj" />
     <ProjectReference Include="..\Talabat.Service\Talabat.Service.csproj" />
   </ItemGroup>
